--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -156,18 +156,35 @@
                     Horário Check OUT: 12h00
                   </p>
                   <p>
-                    NFORMAÇÕES:
+                    INFORMAÇÕES:
                     <i>
                       Diárias incluem café da manhã. Informações e contratações
                       de diárias extras, entrar diretamente com a pousada onde
-                      estará alocado.
+                      estará alocado. Diárias incluem o café da manha.
                     </i>
+                  </p>
+                  <p>
+                    Equipe Logística Cel:
+                    <span class="text-primary">(19) 99459-3637 </span><br />
+                    Email:
+                    <span class="text-primary"
+                      >sanconcierge.logistica@agmuller.com.br</span
+                    >
+                    <br />
+                    <span>SAN CONCIERGE</span>
                   </p>
                   <strong
                     >Não deixem para última hora a compra e agendamento dos
                     horários de seus transfers IN e OUT!</strong
                   >
-                  <div class="text-center col-md-4 col-8 container">
+                  <p>
+                    LINK DE AGENDAMENTO:
+                    <a href="https://sanconcierge.logistica.grrr.com.br/"
+                      >https://sanconcierge.logistica.grrr.com.br/</a
+                    >
+                  </p>
+                  <p class="text-center h5 mt-3 mb-3">SAN CONCIERGE</p>
+                  <div class="text-center col-md-3 col-8 container">
                     <img src="/static/logo.png" class="col-12" />
                   </div>
                 </div>
