--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -167,7 +167,7 @@
                     Equipe Logística Cel:
                     <span class="text-primary">(19) 99459-3637 </span><br />
                     Email:
-                    <span class="text-primary"
+                    <span class="text-primary text-break"
                       >sanconcierge.logistica@agmuller.com.br</span
                     >
                     <br />
@@ -179,7 +179,9 @@
                   >
                   <p>
                     LINK DE AGENDAMENTO:
-                    <a href="https://sanconcierge.logistica.grrr.com.br/"
+                    <a
+                      href="https://sanconcierge.logistica.grrr.com.br/"
+                      class="text-break"
                       >https://sanconcierge.logistica.grrr.com.br/</a
                     >
                   </p>
