--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" style="min-height: 100%; height: 100%">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,31 +11,126 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+      integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <div id="loginDiv">
-      <h1>Login</h1>
-      <form id="form">
-        <input id="username" name="username" placeholder="Username" />
-        <input id="password" name="password" placeholder="Senha de acesso" />
-        <label id="msg" class="d-none"></label>
-        <input id="send" type="button" value="Enviar" />
-      </form>
+  <body class="h-100">
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div
+          class="col-12 h-100 d-md-flex justify-content-center align-items-center mt-md-0 mt-5"
+        >
+          <div id="loginDiv" class="col-md-3 container">
+            <div class="text-center col-11 container mb-3">
+              <img src="/static/logo.png" class="col-4" />
+            </div>
+            <form id="form" class="col-11 container shadow-lg p-3">
+              <div class="col-12 mb-3">
+                <label for="username" class="form-label"
+                  >Nome de usuário:</label
+                >
+                <div class="input-group-lg">
+                  <input
+                    id="username"
+                    name="username"
+                    placeholder="Insira o nome de usuário do administrador"
+                    class="form-control form-control-lg"
+                  />
+                </div>
+              </div>
+              <div class="col-12 mb-3">
+                <label for="password" class="form-label">Senha:</label>
+                <div class="input-group-lg">
+                  <input
+                    id="password"
+                    name="password"
+                    placeholder="Insira sua senha do administrador"
+                    class="form-control form-control-lg"
+                  />
+                </div>
+              </div>
+              <div class="col-12 text-center mb-3">
+                <label id="msg" class="d-none"></label>
+              </div>
+              <div class="col-12 mb-3">
+                <div class="input-group">
+                  <input
+                    class="btn btn-block btn-primary col-12"
+                    type="button"
+                    id="send"
+                    value="Enviar"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+          <div
+            id="dashboard"
+            class="col-md-8 shadow-lg d-none"
+            style="height: 600px"
+          >
+            <div
+              class="col-md-1 h-auto col-12 h-md-100 p-2 border d-md-block d-flex justify-content-around align-items-center"
+            >
+              <div class="container col-md-12 col-2 mt-2 text-center">
+                <img src="/static/logo.png" class="col-md-8 col-12" />
+              </div>
+              <div class="container col-md-12 col-2 mt-2 mt-md-5 text-center">
+                <a href="#" target="_blank" id="export" class="col-12"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor"
+                    width="32"
+                    heigth="32"
+                    class="bi bi-download"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"
+                    />
+                    <path
+                      d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"
+                    /></svg
+                ></a>
+              </div>
+            </div>
+            <div
+              class="col-md-11 h-100 d-flex justify-content-center align-items-center"
+            >
+              <div class="text-center">
+                <h1>Importar Planilha</h1>
+                <small>*.xlsx ou *.cvs</small>
+                <form enctype="multipart/form-data" method="POST" id="import">
+                  <div class="col-12 mb-3">
+                    <div class="input-group">
+                      <input
+                        type="file"
+                        name="clients"
+                        class="form-control-file form-control"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="input-group">
+                      <input
+                        type="submit"
+                        value="Upload"
+                        class="btn btn-block btn-primary col-12"
+                      />
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="dashboard" class="d-none">
-      <h1>Importação e Exportação</h1>
-      <hr />
-      <p>Caso queira fazer o dowload da planilha:</p>
-      <a href="" target="_blank" id="export"><button>Exportar XLSX</button></a>
-      <p>Caso queira importar uma nova planilha:</p>
-      <form enctype="multipart/form-data" method="POST" id="import">
-        <input type="file" name="clients" /><input
-          type="submit"
-          value="Upload"
-        />
-      </form>
-    </div>
-    <script type="module">
+    <script type="text/javascript">
       const username = document.getElementById("username");
       const password = document.getElementById("password");
       const send = document.getElementById("send");
@@ -68,6 +163,7 @@
         setTimeout(() => {
           document.getElementById("loginDiv").classList.add("d-none");
           document.getElementById("dashboard").classList.remove("d-none");
+          document.getElementById("dashboard").classList.add("d-md-flex");
         }, 500);
 
         const exportButton = document.getElementById("export");
