New Clients Form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -229,7 +229,6 @@
           }
         });
       }
-
       async function getTable(client) {
         document.querySelectorAll("#query tr").forEach((el) => el.remove());
         const search = await fetch(
